--- a/Spotify/Form1.resx
+++ b/Spotify/Form1.resx
@@ -117,7 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="Button1.Locked" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="ButtonBlock.Locked" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
   <metadata name="MainTimer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -275,11 +275,30 @@
   <metadata name="ResumeTimer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>242, 17</value>
   </metadata>
+  <data name="SplitContainer1.Panel1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAAUAAAA2CAIAAACA48SxAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAAH5JREFUOE9lx0kOAUEAQNF//32Z04YgiO4QghDEENrMFZzE1k+93eNrfIy38bLo
+        T+Nh3I2bcTUuRm6cjZNxNA7G3tgZW2NjrI2VsTQWxtyYGVNjYtHHxsjIjNQYGgOjb/SMrtEx2kbLaBoN
+        o24kRs2oGhWjbJQsetEoGOFfCD+pijouogwHuAAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="SplitContainer1.Panel2.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAAUAAAA2CAIAAACA48SxAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAAH5JREFUOE9lx0kOAUEAQNF//32Z04YgiO4QghDEENrMFZzE1k+93eNrfIy38bLo
+        T+Nh3I2bcTUuRm6cjZNxNA7G3tgZW2NjrI2VsTQWxtyYGVNjYtHHxsjIjNQYGgOjb/SMrtEx2kbLaBoN
+        o24kRs2oGhWjbJQsetEoGOFfCD+pijouogwHuAAAAABJRU5ErkJggg==
+</value>
+  </data>
   <metadata name="ButtonRemoveEntry.Locked" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
   <metadata name="blocklistBox.Locked" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
+  </metadata>
+  <metadata name="StartupTimer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>506, 17</value>
   </metadata>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
