--- a/EZBlocker/EZBlocker/Properties/Resources.resx
+++ b/EZBlocker/EZBlocker/Properties/Resources.resx
@@ -121,10 +121,10 @@
   <data name="Newtonsoft_Json" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Newtonsoft.Json.dll;System.Byte[], mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="nircmdc32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\nircmdc32.exe;System.Byte[], mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="nircmd32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\nircmd32.exe;System.Byte[], mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="nircmdc64" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\nircmdc64.exe;System.Byte[], mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="nircmd64" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\nircmd64.exe;System.Byte[], mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
 </root>
