Added German translation.

--- a/EZBlocker/EZBlocker/EZBlockerMain.de.resx
+++ b/EZBlocker/EZBlocker/EZBlockerMain.de.resx
@@ -117,126 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="BlockBannersCheckboxText" xml:space="preserve">
-    <value>Werbebanner blockieren</value>
-    <comment>On main form</comment>
-  </data>
-  <data name="BlockBannersRestart" xml:space="preserve">
-    <value>Du musst womöglich Spotify oder Deinen PC neu starten, um diese Einstellung anzuwenden.</value>
-    <comment>BlockBannersCheckbox</comment>
-  </data>
-  <data name="BlockBannersUAC" xml:space="preserve">
-    <value>Aktivieren/Deaktivieren dieser Option verlangt Administratorrechte.
-
-Bitte starte EZBlocker mit "Als Administrator ausführen".</value>
-    <comment>BlockBannersCheckbox</comment>
-  </data>
-  <data name="HiddenNotify" xml:space="preserve">
-    <value>EZBlocker ist verborgen. Doppelklicke auf dieses Icon zum Wiederherstellen.</value>
-    <comment>NotifyIcon</comment>
-  </data>
-  <data name="OnExitMessageBox" xml:space="preserve">
-    <value>Spotify-Werbung wird nicht stummgeschaltet, wenn EZBlocker nicht läuft.
-
-Bist Du sicher?</value>
-    <comment>OnFormClosing</comment>
-  </data>
-  <data name="PatchErrorMessageBox" xml:space="preserve">
-    <value>Fehler beim Patchen von Spotify. EZBlocker funktioniert womöglich nicht.</value>
-    <comment>On startup</comment>
-  </data>
-  <data name="ReportProblemClipboard" xml:space="preserve">
-    <value>EZBlocker Version: {0}
-Spotify Version: {1}</value>
-    <comment>ReportProblemLink</comment>
-  </data>
-  <data name="ReportProblemMessageBox" xml:space="preserve">
-    <value>Bitte hinterlasse einen Kommentar, der Dein Problem klar beschreibt.
-
-Füge diese Informationen ein (befinden sich bereits in deiner Zwischenablage):
-EZBlocker Version: {0}
-Spotify Version: {1}</value>
-    <comment>ReportProblemLink</comment>
-  </data>
-  <data name="SpotifyCheckboxText" xml:space="preserve">
-    <value>Spotify mit EZBlocker starten</value>
-    <comment>On main form</comment>
-  </data>
-  <data name="SpotifyNotFoundMessageBox" xml:space="preserve">
-    <value>Spotify ist nicht installiert oder Du hast die Windows Store Version.
-
-Klicke 'OK', um die normale Desktopversion zu installieren</value>
-    <comment>On startup</comment>
-  </data>
-  <data name="StartupCheckboxText" xml:space="preserve">
-    <value>EZBlocker beim Login starten</value>
-    <comment>On main form</comment>
-  </data>
-  <data name="StatusLabelLoadingText" xml:space="preserve">
-    <value>Lädt...</value>
-    <comment>On main form</comment>
-  </data>
-  <data name="StatusMuting" xml:space="preserve">
-    <value>Stumm:</value>
-    <comment>Status label</comment>
-  </data>
-  <data name="StatusNotFound" xml:space="preserve">
-    <value>Spotify wurde nicht gefunden</value>
-    <comment>Status label</comment>
-  </data>
-  <data name="StatusPaused" xml:space="preserve">
-    <value>Spotify ist pausiert</value>
-    <comment>Status label</comment>
-  </data>
-  <data name="StatusPlaying" xml:space="preserve">
-    <value>Es spielt:</value>
-    <comment>Status label</comment>
-  </data>
-  <data name="ToolStripExit" xml:space="preserve">
-    <value>Schließen</value>
-    <comment>In tray menu</comment>
-  </data>
-  <data name="ToolStripOpen" xml:space="preserve">
-    <value>EZBlocker-Fenster zeigen</value>
-    <comment>In tray menu</comment>
-  </data>
-  <data name="ToolStripRemovePatch" xml:space="preserve">
-    <value>EZBlocker aus Spotify entfernen</value>
-    <comment>In tray menu</comment>
-  </data>
-  <data name="ToolStripWebsite" xml:space="preserve">
-    <value>EZBlocker Website öffnen</value>
-    <comment>In tray menu</comment>
-  </data>
-  <data name="UndoPatchFailMessageBox" xml:space="preserve">
-    <value>Fehler beim Entfernen von EZBlocker aus Spotify.</value>
-    <comment>RemovePatch</comment>
-  </data>
-  <data name="UndoPatchOKMessageBox" xml:space="preserve">
-    <value>EZBlocker aus Spotify entfernt.</value>
-    <comment>RemovePatch</comment>
-  </data>
-  <data name="UpgradeErrorMessageBox" xml:space="preserve">
-    <value>Fehler beim Suchen nach Updates.</value>
-    <comment>CheckUpdate</comment>
-  </data>
-  <data name="UpgradeMessageBox" xml:space="preserve">
-    <value>Eine neuere Version von EZBlocker ist verfügbar. Möchtest Du aktualisieren?</value>
-    <comment>CheckUpdate</comment>
-  </data>
-  <data name="VolumeMixerButtonText" xml:space="preserve">
-    <value>Lautstärkeregler öffnen</value>
-    <comment>On main form</comment>
-  </data>
-  <data name="VolumeMixerOpenError" xml:space="preserve">
-    <value>Lautstärkeregler konnte nicht geöffnet werden.</value>
-    <comment>VolumeMixerButton</comment>
-  </data>
-  <data name="WebsiteLinkText" xml:space="preserve">
+  <data name="WebsiteLink.Text" xml:space="preserve">
     <value>Problem melden</value>
-    <comment>On main form</comment>
   </data>
-  <data name="TranslatedByText" xml:space="preserve">
-    <value>Übersetzt von bluegrams</value>
+  <data name="StatusLabel.Text" xml:space="preserve">
+    <value>Lädt...</value>
   </data>
 </root>
